# vecbase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/: vecbase_cli.cc
db/: db_impl.cc  db_impl.h  log_reader.cc  log_reader.h  log_writer.cc  log_writer.h  version_set.cc  version_set.h
examples/: basic_usage.cc
examples/demo_db/dkv/: MANIFEST
examples/demo_db/indexes/: docs.hnsw  docs.hnsw.ckpt
include/: vecbase.hpp
include/vecbase/: db.h  iterator.h  options.h  slice.h  status.h
index/: distance.cc  distance.h  hnsw_index.cc  hnsw_index.h  index_format.h  page_manager.cc  page_manager.h  vector_index.h
port/: port.h
server/: acceptor.cc  acceptor.h  commands.cc  commands.h  main.cc  resp.cc  resp.h  server.cc  server.h  subreactor.cc  subreactor.h  thread_pool.h  util.h
table/: buffer_pool.cc  buffer_pool.h  format.h  table_builder.cc  table_builder.h  table_reader.cc  table_reader.h
tests/: test_main.cc
util/: crc32c.cc  crc32c.h  env.h  lru_k_replacer.cc  lru_k_replacer.h
